Added page change functionality

--- a/src/Styles/ColumnNames.css
+++ b/src/Styles/ColumnNames.css
@@ -3,6 +3,12 @@
     justify-content: space-between;
 }
 
+.checkbox {
+    margin: auto;
+}
+
 .column-name-item {
     flex-basis: 100%;
+    display: flex;
+    align-items: center;
 }
