--- a/src/Styles/TableRow.css
+++ b/src/Styles/TableRow.css
@@ -12,3 +12,22 @@
     display: flex;
     align-items: center;
 }
+
+.icon-edit {
+    padding-right: 1rem;
+    font-size: 1.5rem;
+    transition: 0.25s;
+}
+
+.icon-delete {
+    padding-right: 1rem;
+    font-size: 1.5rem;
+    transition: 0.25s;
+    color: red;
+}
+
+.icon-edit:hover,
+.icon-delete:hover {
+    font-size: 2rem;
+    padding-right: 0.5rem;
+}
