--- a/src/Styles/Header.css
+++ b/src/Styles/Header.css
@@ -2,6 +2,7 @@
     display: flex;
     justify-content: space-between;
     padding: 0.5rem;
+    align-items: center;
 }
 
 .input {
@@ -16,9 +17,18 @@
     padding-right: 1rem;
     background-color: rgba(143, 143, 143, 0.456);
     border-radius: 1rem;
+    display: flex;
+    align-items: center;
 }
 
 .delete-icon {
     font-size: 2rem;
     color: red;
+    padding: 0.5rem;
+    transition: 0.25s;
+}
+
+.delete-icon:hover {
+    font-size: 2.5rem;
+    cursor: pointer;
 }
