--- a/src/Styles/TableRow.css
+++ b/src/Styles/TableRow.css
@@ -3,6 +3,10 @@
     justify-content: space-between;
 }
 
+.gray-row {
+    background-color: rgb(204, 204, 204);
+}
+
 .checkbox {
     margin: auto;
 }
