--- a/src/Styles/Footer.css
+++ b/src/Styles/Footer.css
@@ -4,11 +4,11 @@
     padding-left: 2rem;
     padding-right: 2rem;
     padding-top: 1rem;
-    padding-bottom: 1rem;
 }
 
 .selections {
     display: flex;
+    flex-basis: 100%;
 }
 
 .selected {
@@ -21,13 +21,21 @@
     justify-content: end;
 }
 
+p {
+    padding-right: 2.5%;
+}
+
 .button-no {
     background-color: white;
 }
 
 button {
     margin: 0.5%;
+    margin-top: 1.5%;
+    margin-bottom: 1.5%;
     transition: 0.25s;
+    border-radius: 20%;
+    background-color: rgb(170, 170, 170);
 }
 
 button:hover {
