--- a/src/Styles/Header.css
+++ b/src/Styles/Header.css
@@ -12,7 +12,6 @@
 }
 
 .form {
-    padding: 0.25rem;
     padding-left: 1rem;
     padding-right: 1rem;
     background-color: rgba(143, 143, 143, 0.456);
@@ -38,6 +37,6 @@
 }
 
 .delete-icon:hover {
-    font-size: 2.25rem;
+    transform: scale(1.2);
     cursor: pointer;
 }
